[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/GameMenu.gd" type="Script" id=1]

[node name="GameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 92.0
margin_top = 59.0
margin_right = 228.0
margin_bottom = 121.0

[node name="MenuLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 136.0
margin_bottom = 14.0
text = "GameState Showcase"
align = 1

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 136.0
margin_bottom = 38.0
text = "Start a new Game"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 136.0
margin_bottom = 62.0
text = "Quit the Game"

[node name="GameStateLabel" type="Label" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 14.0
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
